Fixed Nav z-index and width

--- a/style/scss/_functions.scss
+++ b/style/scss/_functions.scss
@@ -16,3 +16,4 @@ $box-shadowBefore:0px 20px 40px rgba(0, 0, 0, 0.04),
             -10px 0px 40px rgba(0, 0, 0, 0.06);
 $box-shadow:0px 20px 40px rgba(0, 0, 0, 0.07),
             -10px 0px 40px rgba(0, 0, 0, 0.08);
+$box-shadow-one:0px 20px 40px rgba(0, 0, 0, 0.07);
